--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body id="page-top">
-
+<meta http-equiv="Refresh" content="0;url=https://t.co/gtKsJS8ZGk>
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
